<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="act_phone_toptext">绑定手机号后可以使用手机号和密码直接登录</string>
    <string name="app_name">嘿秀</string>
    <string name="live_title_hint">取个好名字更加吸引人哦...</string>
    <string name="live_cover_hint">封面图片</string>
    <string name="content_desc">这是直播封面</string>
    <string name="show_btn_txt">立即直播</string>

    <string name="formal_environment">正式环境</string>
    <string name="test_environment">测试环境</string>
    <string name="login_error_login_failed">用户帐号或密码错误</string>
    <string name="login_error_empty_input">帐号或密码不能为空</string>
    <string name="login_net_error">网络链接错误</string>
    <string name="login_sms_password_empty">验证码输入为空</string>
    <string name="btn_get_sms_password">获取验证码</string>

    <string name="handfree_summary">开关扬声器</string>
    <string name="video_handfree">免提</string>
    <string name="mic_summary">开关麦克风</string>
    <string name="mic">麦克风</string>
    <string name="camera_summary">开关摄像头</string>
    <string name="video_camera_txt">摄像头</string>
    <string name="video_switch_camera">切换摄像头</string>

    <string name="error_code_prefix">错误码：</string>
    <string name="interface_initialization">界面初始化中</string>
    <string name="at_login">登录中</string>
    <string name="login_failed">登录失败</string>
    <string name="at_logout">登出中</string>
    <string name="at_on_camera">打开摄像头中</string>
    <string name="on_camera_failed">打开摄像头失败</string>

    <string name="qingxuanzheni">请选择你感兴趣的人</string>

    <string name="at_off_camera">关闭摄像头中</string>
    <string name="off_camera_failed">关闭摄像头失败</string>
    <string name="at_switch_front_camera">换用前置摄像头中</string>
    <string name="switch_front_camera_failed">换用前置摄像头失败</string>
    <string name="at_switch_back_camera">换用后置摄像头中</string>
    <string name="switch_back_camera_failed">换用后置摄像头失败</string>
    <string name="at_close_room">关闭房间中</string>
    <string name="notify_network_timeout">超时异常</string>
    <string name="notify_network_error">网络无法联通，请检查网络</string>
    <string name="notify_no_network">网络无连接，请检查网络</string>
    <string name="title_activity_danmu">DanmuActivity</string>
    <string name="title_activity_duanmu">Duanmu</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ!@#$%^*</string>

    <string name="title_activity_tui_jian">TuiJianActivity</string>

    <string name="room_contributors">1000魅力值</string>
    <string name="room_contributor_contribution">贡献%1$d魅力值</string>
    <string name="title_activity_mainhehe_aectivity">MainheheAectivity</string>
    <string name="message">为保证您的账户安全，共同创建一个绿色和谐直播环境，请上传您的身份证信息，进行认证。</string>
    <string name="msg">确定要兑换吗？</string>
    <string name="examine_fail">您的认证申请已被驳回，可修改信息后在次提交。</string>
    <string name="examine_ing">信息审核中，感谢配合。</string>
    <string name="protol"><u>嘿秀直播用户许可及服务协议</u></string>
    <string name="profit"><u>用户收益提现协议?</u></string>
    <string name="select">false</string>
    <string name="prompt_concern">主播棒棒哒有没有~不想错过下一场就赶紧关注她吧!</string>
    <string name="profit_attestation">实名信息一经提交不得修改，确定要提交吗？</string>
    <string name="profit_message">信息已提交，快来直播吧！</string>
    <string name="profit_message_error">网络不太顺畅哟，再试下吧~</string>
    <string name="profit_sure">确定</string>
    <string name="profit_later">稍后</string>
    <string name="saveRecord"><u>保存回放</u></string>
    <string name="laboragreement"><u>劳务协议</u></string>
    <string name="showattestion">直播前请先认证身份</string>
    <string name="true_name">请输入您的真实姓名</string>
    <string name="id_number">请输入与姓名一致的身份证号</string>
    <string name="message1">1.实名信息一经提交不得修改，请认真填写。</string>
    <string name="message2">2.禁止18岁以下用户开启直播。</string>
    <string name="no_live_message">等级在三级以下的用户不能直播哦~多看直播和刷礼物可以快速升级的！</string>
    <string name="no_age_old">亲爱的小朋友，年龄不满18周岁不能直播哟~！</string>
    <string name="awaiting_review">实名认证审核中，通过后即可提现！</string>
    <string name="waiting">再等等</string>
    <string name="see_progress">查看进度</string>
    <string name="incomplete_message">实名认证信息不完整，完整后即可提现</string>
    <string name="go_attestation">实名认证通过后方可提现，赶快去认证吧！</string>
    <string name="afresh_attestation">实名认证未通过，通过后方可提现，去重新认证！</string>
    <string name="withhold">暂不</string>
    <string name="go_to">去认证</string>
    <string name="go_perfect">去完善</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="captcha">验证码</string>
    <string name="getcaptcha">获取验证码</string>
    <string name="phone_num">请输入手机号</string>
    <string name="withdraw_message1">1、请确认您已绑定微信账户，绑定后才可提现哦；</string>
    <string name="withdraw_message2"
        formatted="false">2、每月小额提现金额为%.0f元，超过%.0f元请在“嘿秀”微信公众号内进行提现，微信提现时将按照国家相关税务政策进行；</string>
    <string name="withdraw_message3">3、如未到账请及时在公众号内留言，我们会尽快为您解决。</string>
    <string name="binding_phone">您还未绑定手机号，为了您的提现安全，请绑定手机</string>
    <string name="succes">恭喜您已成功提交申请，您的提现将于2日以内完成</string>
    <string name="hint_message">送礼物主播可得存在感或嘿豆</string>
    <string name="toast_message">此版本不支持此类道具，请升级到最新版本”</string>

    <string name="loading">正在加载…</string>
    <string name="refreshing">正在刷新…</string>
    <string name="complete">刷新完成</string>
    <string name="type_hint">所有人都可以观看你的直播</string>
    <string name="type_change">特定人可以观看你的直播</string>
    <string name="pwd_hint">请设置一个四位数字密码</string>
    <string name="anchor">主播</string>
    <string name="spectator">观众</string>
    <string name="hx_manager">嘿秀管理员</string>
    <string name="permanent_manager">永久管理员</string>
    <string name="temporary_manager">临时管理员</string>
    <string name="permanent_manager_text">永久管理员剩余个数：4</string>
    <string name="permanent_manager_explain">左划可撤销管理员，增加管理员请点击头像左上角进行操作</string>
    <string name="temporary_manager_text">临时管理员数量没有上限，重新开启直播后失效</string>
    <string name="fans">粉丝</string>
    <string name="fans_hint1">您还没有粉丝哦</string>
    <string name="fans_hint2">多直播才能获得粉丝哦</string>
    <string name="bill_fans_hint1">还没有支持过别人呦</string>
    <string name="bill_fans_hint2">快去支持喜欢的主播吧</string>
    <string name="bill_self_hint1">还没有获得粉丝支持哦</string>
    <string name="bill_self_hint2">直播能收获粉丝哦</string>
    <string name="search_hint">搜索用户昵称或ID</string>
    <string name="cancel">取消</string>
    <string name="net_hint">网络异常</string>
    <string name="search_blank_hint">去搜索你想找的主播吧</string>
    <string name="search_no_hint">您搜索的人不存在</string>
    <string name="charm_value">魅力值：</string>
    <string name="att_hint1">您还没有关注的人</string>
    <string name="att_hint2">快去关注你喜欢的主播吧</string>
    <string name="login_toast">"账号过期，请重新登录"</string>
    <string name="headp_photo">头像</string>
    <string name="nick_name">昵称</string>
    <string name="heixiu_id">嘿秀ID</string>
    <string name="sig_con">#嘿秀等你来表白#</string>
    <string name="sign">个性签名</string>
    <string name="grade">我的等级</string>
    <string name="certif">实名认证</string>
    <string name="profle_title">修改个人资料</string>
    <string name="photo_fail">图片生成中遇到了问题...</string>
    <string name="grade_count">级</string>
    <string name="login_expire">登录过期，请重新登录</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="miss_params_code_401">网络请求出错，code:401</string>
    <string name="wrong_reque_code_501">网络请求出错，code:501</string>
    <string name="dialog_banned_tit">您的账户已被封禁</string>
    <string name="dialog_banned_rules">查看封禁规则>></string>
    <string name="dialog_banned_help">如有疑问，请联系嘿秀客服</string>
    <string name="dialog_banned_qq1">QQ:2127642960</string>
    <string name="dialog_banned_qq2">331825085</string>
    <string name="dialog_banned_ok">好吧</string>
</resources>