<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="@color/trans"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"

        android:background="@drawable/img_dialog_banned_bg"
        android:layout_width="276dp"
        android:layout_height="390dp">

        <TextView
            android:id="@+id/tv_tit"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:text="@string/dialog_banned_tit"
            android:textSize="26sp"
            android:textColor="@color/text_des"
            android:layout_marginTop="35dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_datemm"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:text="2天后解封"
            android:textColor="@color/give_zuan"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="您直播时因为涉嫌"
                android:textColor="@color/text_des"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="15sp"
                android:id="@+id/tv_context"
                android:layout_width="wrap_content"
                android:text="社情暴力,"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>

            <TextView

                android:layout_width="wrap_content"
                android:text="被封禁"
                android:textSize="15sp"
                android:textColor="@color/text_des"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_mmdate"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:text="7天,"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="内您无法登陆嘿秀账号。"
                android:textColor="@color/text_des"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/dialog_banned_rules"
            android:textColor="@color/give_zuan"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dialog_banned_help"
            android:textColor="@color/text_des"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_qq1"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_banned_qq1"
            android:textColor="@color/text_des"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_qq2"
            android:layout_width="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/dialog_banned_qq2"
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_des"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/but_ok"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="21sp"
            android:layout_marginLeft="25dp"
            android:text="@string/dialog_banned_ok"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:background="@drawable/dialog_banned_but_bg"
            android:layout_height="40dp"/>
    </LinearLayout>
</FrameLayout>