<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="35dp"
        android:text="@string/binding_phone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_attesation_dialg">

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/tv_get_captcha"
            android:background="@drawable/shape_attestion_backround"
            android:hint="@string/phone_num" />

        <TextView
            android:id="@+id/tv_get_captcha"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_time"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:textColor="@color/text_white"
            android:paddingRight="10dp"
            android:text="@string/getcaptcha" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_attesation_dialg">

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="@color/give_zuan"
            android:text="@string/captcha" />

        <EditText
            android:id="@+id/et_withcode"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_toRightOf="@+id/tv_amount"
            android:background="@drawable/shape_attestion_backround" />
    </RelativeLayout>


    <studio.archangel.toolkitv2.views.AngelMaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:minHeight="42dp"
        app:amb_text="提交"
        app:amb_text_color="@color/text_white"
        app:amb_text_size="17sp"
        app:aml_border="round"
        app:aml_color_background="@color/hx_main" />


</LinearLayout>